Qupid/AutoGen/QuerySyntaxParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.0.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.0.1 QuerySyntax.g 2013-10-16 08:52:07

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


	using System;
	using System.Text;
	using Qupid.AST;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  Qupid.AutoGen 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.0.1")]
[System.CLSCompliant(false)]
public partial class QuerySyntaxParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "BY", "COMMA", "DOT", "EQUALS", "FROM", "GREATER_THAN", "GREATER_THAN_EQUAL", "GROUP", "HAVING", "ID", "JOIN", "LESS_THAN", "LESS_THAN_EQUAL", "NOT_EQUALS", "NUMBER_LITERAL", "ON", "OR", "QUOTE", "SELECT", "STAR", "STRING_LITERAL", "UNWIND", "WHERE", "WITH", "WS"
	};
	public const int EOF=-1;
	public const int AND=4;
	public const int BY=5;
	public const int COMMA=6;
	public const int DOT=7;
	public const int EQUALS=8;
	public const int FROM=9;
	public const int GREATER_THAN=10;
	public const int GREATER_THAN_EQUAL=11;
	public const int GROUP=12;
	public const int HAVING=13;
	public const int ID=14;
	public const int JOIN=15;
	public const int LESS_THAN=16;
	public const int LESS_THAN_EQUAL=17;
	public const int NOT_EQUALS=18;
	public const int NUMBER_LITERAL=19;
	public const int ON=20;
	public const int OR=21;
	public const int QUOTE=22;
	public const int SELECT=23;
	public const int STAR=24;
	public const int STRING_LITERAL=25;
	public const int UNWIND=26;
	public const int WHERE=27;
	public const int WITH=28;
	public const int WS=29;

	public QuerySyntaxParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public QuerySyntaxParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return QuerySyntaxParser.tokenNames; } }
	public override string GrammarFileName { get { return "QuerySyntax.g"; } }


		public QupidQuery Parse() {
			var result = main();
			return result.q;
		}


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	private sealed partial class main_return : AstParserRuleReturnScope<object, IToken>
	{
		public QupidQuery q;
		public main_return(QuerySyntaxParser grammar) {OnCreated(grammar);}
		partial void OnCreated(QuerySyntaxParser grammar);
	}

	partial void EnterRule_main();
	partial void LeaveRule_main();
	// $ANTLR start "main"
	// QuerySyntax.g:35:1: main returns [QupidQuery q] : qq= select_statement EOF ;
	[GrammarRule("main")]
	private QuerySyntaxParser.main_return main()
	{
		EnterRule_main();
		EnterRule("main", 1);
		TraceIn("main", 1);
		QuerySyntaxParser.main_return retval = new QuerySyntaxParser.main_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EOF1 = default(IToken);
		AstParserRuleReturnScope<object, IToken> qq = default(AstParserRuleReturnScope<object, IToken>);

		object EOF1_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "main");
		DebugLocation(35, 4);
		try
		{
			// QuerySyntax.g:35:27: (qq= select_statement EOF )
			DebugEnterAlt(1);
			// QuerySyntax.g:36:5: qq= select_statement EOF
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(36, 8);
			PushFollow(Follow._select_statement_in_main105);
			qq=select_statement();
			PopFollow();

			adaptor.AddChild(root_0, qq.Tree);
			DebugLocation(36, 27);
			EOF1=(IToken)Match(input,EOF,Follow._EOF_in_main107); 
			EOF1_tree = (object)adaptor.Create(EOF1);
			adaptor.AddChild(root_0, EOF1_tree);
			DebugLocation(37, 5);
			 retval.q = (qq!=null?((QuerySyntaxParser.select_statement_return)qq).q:default(QupidQuery)); 

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("main", 1);
			LeaveRule("main", 1);
			LeaveRule_main();
		}
		DebugLocation(38, 4);
		} finally { DebugExitRule(GrammarFileName, "main"); }
		return retval;

	}
	// $ANTLR end "main"

	private sealed partial class select_statement_return : AstParserRuleReturnScope<object, IToken>
	{
		public QupidQuery q;
		public select_statement_return(QuerySyntaxParser grammar) {OnCreated(grammar);}
		partial void OnCreated(QuerySyntaxParser grammar);
	}

	partial void EnterRule_select_statement();
	partial void LeaveRule_select_statement();
	// $ANTLR start "select_statement"
	// QuerySyntax.g:40:1: select_statement returns [QupidQuery q] : SELECT pl= column_list f= from_clause (wr= where_clause )? (uw= unwind_clause )? (g= group_by_clause )? (h= having_clause )? (with= with_clause )? ;
	[GrammarRule("select_statement")]
	private QuerySyntaxParser.select_statement_return select_statement()
	{
		EnterRule_select_statement();
		EnterRule("select_statement", 2);
		TraceIn("select_statement", 2);
		QuerySyntaxParser.select_statement_return retval = new QuerySyntaxParser.select_statement_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken SELECT2 = default(IToken);
		AstParserRuleReturnScope<object, IToken> pl = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> f = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> wr = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> uw = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> g = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> h = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> with = default(AstParserRuleReturnScope<object, IToken>);

		object SELECT2_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "select_statement");
		DebugLocation(40, 4);
		try
		{
			// QuerySyntax.g:40:39: ( SELECT pl= column_list f= from_clause (wr= where_clause )? (uw= unwind_clause )? (g= group_by_clause )? (h= having_clause )? (with= with_clause )? )
			DebugEnterAlt(1);
			// QuerySyntax.g:41:7: SELECT pl= column_list f= from_clause (wr= where_clause )? (uw= unwind_clause )? (g= group_by_clause )? (h= having_clause )? (with= with_clause )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(41, 7);
			SELECT2=(IToken)Match(input,SELECT,Follow._SELECT_in_select_statement134); 
			SELECT2_tree = (object)adaptor.Create(SELECT2);
			adaptor.AddChild(root_0, SELECT2_tree);
			DebugLocation(42, 8);
			PushFollow(Follow._column_list_in_select_statement145);
			pl=column_list();
			PopFollow();

			adaptor.AddChild(root_0, pl.Tree);
			DebugLocation(43, 7);
			PushFollow(Follow._from_clause_in_select_statement157);
			f=from_clause();
			PopFollow();

			adaptor.AddChild(root_0, f.Tree);
			DebugLocation(44, 8);
			// QuerySyntax.g:44:8: (wr= where_clause )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, false);
			int LA1_1 = input.LA(1);

			if ((LA1_1==WHERE))
			{
				alt1 = 1;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// QuerySyntax.g:44:8: wr= where_clause
				{
				DebugLocation(44, 8);
				PushFollow(Follow._where_clause_in_select_statement168);
				wr=where_clause();
				PopFollow();

				adaptor.AddChild(root_0, wr.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(1); }

			DebugLocation(45, 5);
			// QuerySyntax.g:45:5: (uw= unwind_clause )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_1 = input.LA(1);

			if ((LA2_1==UNWIND))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// QuerySyntax.g:45:5: uw= unwind_clause
				{
				DebugLocation(45, 5);
				PushFollow(Follow._unwind_clause_in_select_statement176);
				uw=unwind_clause();
				PopFollow();

				adaptor.AddChild(root_0, uw.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(2); }

			DebugLocation(46, 7);
			// QuerySyntax.g:46:7: (g= group_by_clause )?
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			int LA3_1 = input.LA(1);

			if ((LA3_1==GROUP))
			{
				alt3 = 1;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// QuerySyntax.g:46:7: g= group_by_clause
				{
				DebugLocation(46, 7);
				PushFollow(Follow._group_by_clause_in_select_statement188);
				g=group_by_clause();
				PopFollow();

				adaptor.AddChild(root_0, g.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(3); }

			DebugLocation(47, 4);
			// QuerySyntax.g:47:4: (h= having_clause )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_1 = input.LA(1);

			if ((LA4_1==HAVING))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// QuerySyntax.g:47:4: h= having_clause
				{
				DebugLocation(47, 4);
				PushFollow(Follow._having_clause_in_select_statement197);
				h=having_clause();
				PopFollow();

				adaptor.AddChild(root_0, h.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(4); }

			DebugLocation(48, 7);
			// QuerySyntax.g:48:7: (with= with_clause )?
			int alt5=2;
			try { DebugEnterSubRule(5);
			try { DebugEnterDecision(5, false);
			int LA5_1 = input.LA(1);

			if ((LA5_1==WITH))
			{
				alt5 = 1;
			}
			} finally { DebugExitDecision(5); }
			switch (alt5)
			{
			case 1:
				DebugEnterAlt(1);
				// QuerySyntax.g:48:7: with= with_clause
				{
				DebugLocation(48, 7);
				PushFollow(Follow._with_clause_in_select_statement205);
				with=with_clause();
				PopFollow();

				adaptor.AddChild(root_0, with.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(5); }

			DebugLocation(49, 5);

			    	retval.q = new QupidQuery((pl!=null?((QuerySyntaxParser.column_list_return)pl).pl:default(PropertyList)), (f!=null?((QuerySyntaxParser.from_clause_return)f).s:default(string)), (wr!=null?((QuerySyntaxParser.where_clause_return)wr).wc:default(List<WhereClause>)), (uw!=null?((QuerySyntaxParser.unwind_clause_return)uw).uw:default(UnwindClause)), (g!=null?((QuerySyntaxParser.group_by_clause_return)g).g:default(GroupByClause)), (h!=null?((QuerySyntaxParser.having_clause_return)h).h:default(HavingClause)), (with!=null?((QuerySyntaxParser.with_clause_return)with).w:default(WithClause)));
			        retval.q.ErrorManager = _errorManager;
			    

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("select_statement", 2);
			LeaveRule("select_statement", 2);
			LeaveRule_select_statement();
		}
		DebugLocation(53, 4);
		} finally { DebugExitRule(GrammarFileName, "select_statement"); }
		return retval;

	}
	// $ANTLR end "select_statement"

	private sealed partial class column_list_return : AstParserRuleReturnScope<object, IToken>
	{
		public PropertyList pl;
		public column_list_return(QuerySyntaxParser grammar) {OnCreated(grammar);}
		partial void OnCreated(QuerySyntaxParser grammar);
	}

	partial void EnterRule_column_list();
	partial void LeaveRule_column_list();
	// $ANTLR start "column_list"
	// QuerySyntax.g:55:1: column_list returns [PropertyList pl] :scp= select_clause ( ',' scp= select_clause )* ;
	[GrammarRule("column_list")]
	private QuerySyntaxParser.column_list_return column_list()
	{
		EnterRule_column_list();
		EnterRule("column_list", 3);
		TraceIn("column_list", 3);
		QuerySyntaxParser.column_list_return retval = new QuerySyntaxParser.column_list_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken char_literal3 = default(IToken);
		AstParserRuleReturnScope<object, IToken> scp = default(AstParserRuleReturnScope<object, IToken>);

		object char_literal3_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "column_list");
		DebugLocation(55, 4);
		try
		{
			// QuerySyntax.g:55:37: (scp= select_clause ( ',' scp= select_clause )* )
			DebugEnterAlt(1);
			// QuerySyntax.g:56:5: scp= select_clause ( ',' scp= select_clause )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(56, 5);
			 retval.pl = new PropertyList(); 
			DebugLocation(57, 9);
			PushFollow(Follow._select_clause_in_column_list245);
			scp=select_clause();
			PopFollow();

			adaptor.AddChild(root_0, scp.Tree);
			DebugLocation(57, 25);
			 retval.pl.Add((scp!=null?((QuerySyntaxParser.select_clause_return)scp).pr:default(PropertyReference))); 
			DebugLocation(58, 5);
			// QuerySyntax.g:58:5: ( ',' scp= select_clause )*
			try { DebugEnterSubRule(6);
			while (true)
			{
				int alt6=2;
				try { DebugEnterDecision(6, false);
				int LA6_1 = input.LA(1);

				if ((LA6_1==COMMA))
				{
					alt6 = 1;
				}


				} finally { DebugExitDecision(6); }
				switch ( alt6 )
				{
				case 1:
					DebugEnterAlt(1);
					// QuerySyntax.g:58:6: ',' scp= select_clause
					{
					DebugLocation(58, 6);
					char_literal3=(IToken)Match(input,COMMA,Follow._COMMA_in_column_list254); 
					char_literal3_tree = (object)adaptor.Create(char_literal3);
					adaptor.AddChild(root_0, char_literal3_tree);
					DebugLocation(58, 14);
					PushFollow(Follow._select_clause_in_column_list260);
					scp=select_clause();
					PopFollow();

					adaptor.AddChild(root_0, scp.Tree);
					DebugLocation(58, 30);
					 retval.pl.Add((scp!=null?((QuerySyntaxParser.select_clause_return)scp).pr:default(PropertyReference))); 

					}
					break;

				default:
					goto loop6;
				}
			}

			loop6:
				;

			} finally { DebugExitSubRule(6); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("column_list", 3);
			LeaveRule("column_list", 3);
			LeaveRule_column_list();
		}
		DebugLocation(59, 4);
		} finally { DebugExitRule(GrammarFileName, "column_list"); }
		return retval;

	}
	// $ANTLR end "column_list"

	private sealed partial class from_clause_return : AstParserRuleReturnScope<object, IToken>
	{
		public string s;
		public from_clause_return(QuerySyntaxParser grammar) {OnCreated(grammar);}
		partial void OnCreated(QuerySyntaxParser grammar);
	}

	partial void EnterRule_from_clause();
	partial void LeaveRule_from_clause();
	// $ANTLR start "from_clause"
	// QuerySyntax.g:61:1: from_clause returns [string s] : FROM col= ID ;
	[GrammarRule("from_clause")]
	private QuerySyntaxParser.from_clause_return from_clause()
	{
		EnterRule_from_clause();
		EnterRule("from_clause", 4);
		TraceIn("from_clause", 4);
		QuerySyntaxParser.from_clause_return retval = new QuerySyntaxParser.from_clause_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken col = default(IToken);
		IToken FROM4 = default(IToken);

		object col_tree = default(object);
		object FROM4_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "from_clause");
		DebugLocation(61, 1);
		try
		{
			// QuerySyntax.g:61:30: ( FROM col= ID )
			DebugEnterAlt(1);
			// QuerySyntax.g:62:5: FROM col= ID
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(62, 5);
			FROM4=(IToken)Match(input,FROM,Follow._FROM_in_from_clause283); 
			FROM4_tree = (object)adaptor.Create(FROM4);
			adaptor.AddChild(root_0, FROM4_tree);
			DebugLocation(62, 14);
			col=(IToken)Match(input,ID,Follow._ID_in_from_clause289); 
			col_tree = (object)adaptor.Create(col);
			adaptor.AddChild(root_0, col_tree);
			DebugLocation(63, 2);
			 retval.s = (col!=null?col.Text:default(string)); 

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("from_clause", 4);
			LeaveRule("from_clause", 4);
			LeaveRule_from_clause();
		}
		DebugLocation(64, 1);
		} finally { DebugExitRule(GrammarFileName, "from_clause"); }
		return retval;

	}
	// $ANTLR end "from_clause"

	private sealed partial class group_by_clause_return : AstParserRuleReturnScope<object, IToken>
	{
		public GroupByClause g;
		public group_by_clause_return(QuerySyntaxParser grammar) {OnCreated(grammar);}
		partial void OnCreated(QuerySyntaxParser grammar);
	}

	partial void EnterRule_group_by_clause();
	partial void LeaveRule_group_by_clause();
	// $ANTLR start "group_by_clause"
	// QuerySyntax.g:66:1: group_by_clause returns [GroupByClause g] : GROUP BY pr= property_reference ;
	[GrammarRule("group_by_clause")]
	private QuerySyntaxParser.group_by_clause_return group_by_clause()
	{
		EnterRule_group_by_clause();
		EnterRule("group_by_clause", 5);
		TraceIn("group_by_clause", 5);
		QuerySyntaxParser.group_by_clause_return retval = new QuerySyntaxParser.group_by_clause_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken GROUP5 = default(IToken);
		IToken BY6 = default(IToken);
		AstParserRuleReturnScope<object, IToken> pr = default(AstParserRuleReturnScope<object, IToken>);

		object GROUP5_tree = default(object);
		object BY6_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "group_by_clause");
		DebugLocation(66, 1);
		try
		{
			// QuerySyntax.g:67:2: ( GROUP BY pr= property_reference )
			DebugEnterAlt(1);
			// QuerySyntax.g:67:4: GROUP BY pr= property_reference
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(67, 4);
			GROUP5=(IToken)Match(input,GROUP,Follow._GROUP_in_group_by_clause306); 
			GROUP5_tree = (object)adaptor.Create(GROUP5);
			adaptor.AddChild(root_0, GROUP5_tree);
			DebugLocation(68, 3);
			BY6=(IToken)Match(input,BY,Follow._BY_in_group_by_clause311); 
			BY6_tree = (object)adaptor.Create(BY6);
			adaptor.AddChild(root_0, BY6_tree);
			DebugLocation(69, 5);
			PushFollow(Follow._property_reference_in_group_by_clause318);
			pr=property_reference();
			PopFollow();

			adaptor.AddChild(root_0, pr.Tree);
			DebugLocation(70, 2);
			 retval.g = new GroupByClause((pr!=null?((QuerySyntaxParser.property_reference_return)pr).pr:default(PropertyReference))); 

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("group_by_clause", 5);
			LeaveRule("group_by_clause", 5);
			LeaveRule_group_by_clause();
		}
		DebugLocation(71, 1);
		} finally { DebugExitRule(GrammarFileName, "group_by_clause"); }
		return retval;

	}
	// $ANTLR end "group_by_clause"

	private sealed partial class having_clause_return : AstParserRuleReturnScope<object, IToken>
	{
		public HavingClause h;
		public having_clause_return(QuerySyntaxParser grammar) {OnCreated(grammar);}
		partial void OnCreated(QuerySyntaxParser grammar);
	}

	partial void EnterRule_having_clause();
	partial void LeaveRule_having_clause();
	// $ANTLR start "having_clause"
	// QuerySyntax.g:73:1: having_clause returns [HavingClause h] : HAVING lhsRef= property_reference comp= comparison rhsRef= constant_or_reference ;
	[GrammarRule("having_clause")]
	private QuerySyntaxParser.having_clause_return having_clause()
	{
		EnterRule_having_clause();
		EnterRule("having_clause", 6);
		TraceIn("having_clause", 6);
		QuerySyntaxParser.having_clause_return retval = new QuerySyntaxParser.having_clause_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken HAVING7 = default(IToken);
		AstParserRuleReturnScope<object, IToken> lhsRef = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> comp = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> rhsRef = default(AstParserRuleReturnScope<object, IToken>);

		object HAVING7_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "having_clause");
		DebugLocation(73, 4);
		try
		{
			// QuerySyntax.g:73:38: ( HAVING lhsRef= property_reference comp= comparison rhsRef= constant_or_reference )
			DebugEnterAlt(1);
			// QuerySyntax.g:74:17: HAVING lhsRef= property_reference comp= comparison rhsRef= constant_or_reference
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(74, 17);
			HAVING7=(IToken)Match(input,HAVING,Follow._HAVING_in_having_clause349); 
			HAVING7_tree = (object)adaptor.Create(HAVING7);
			adaptor.AddChild(root_0, HAVING7_tree);
			DebugLocation(75, 12);
			PushFollow(Follow._property_reference_in_having_clause363);
			lhsRef=property_reference();
			PopFollow();

			adaptor.AddChild(root_0, lhsRef.Tree);
			DebugLocation(76, 10);
			PushFollow(Follow._comparison_in_having_clause379);
			comp=comparison();
			PopFollow();

			adaptor.AddChild(root_0, comp.Tree);
			DebugLocation(77, 12);
			PushFollow(Follow._constant_or_reference_in_having_clause393);
			rhsRef=constant_or_reference();
			PopFollow();

			adaptor.AddChild(root_0, rhsRef.Tree);
			DebugLocation(78, 5);
			 
			    	var literal = (rhsRef!=null?((QuerySyntaxParser.constant_or_reference_return)rhsRef).strLiteral:default(string)) == null ? (object)(rhsRef!=null?((QuerySyntaxParser.constant_or_reference_return)rhsRef).numLiteral:default(long)) : (object)(rhsRef!=null?((QuerySyntaxParser.constant_or_reference_return)rhsRef).strLiteral:default(string));
			    	retval.h = new HavingClause((lhsRef!=null?((QuerySyntaxParser.property_reference_return)lhsRef).pr:default(PropertyReference)), GetComparison((comp!=null?((IToken)comp.Start):default(IToken))), literal);
			    

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("having_clause", 6);
			LeaveRule("having_clause", 6);
			LeaveRule_having_clause();
		}
		DebugLocation(82, 4);
		} finally { DebugExitRule(GrammarFileName, "having_clause"); }
		return retval;

	}
	// $ANTLR end "having_clause"

	private sealed partial class with_clause_return : AstParserRuleReturnScope<object, IToken>
	{
		public WithClause w;
		public with_clause_return(QuerySyntaxParser grammar) {OnCreated(grammar);}
		partial void OnCreated(QuerySyntaxParser grammar);
	}
